- Active CRUD POST UI
----- Add Post
----- Edit Post
----- Remove Post

--- a/detail-post.html
+++ b/detail-post.html
@@ -113,7 +113,7 @@
 							<img
 								data-album="lightBox"
 								src="https://picsum.photos/1368/1000"
-								alt=""
+								alt="Picsum photos"
 							/>
 						</div>
 
@@ -130,7 +130,7 @@
 
 		<section id="lightBox" class="modal-box">
 			<div class="modal-box-img">
-				<img data-id="lightBoxImage" src="./images/lastest-post.jpg" alt="" />
+				<img data-id="lightBoxImage" src="" alt="" />
 			</div>
 
 			<div class="modal-box-button">
