--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<ul class="nav">
 						<li>
 							<span><i class="fa-solid fa-circle-plus"></i></span>
-							<a class="nav__link" href="#">Add new post</a>
+							<a class="nav__link" href="add-edit-post.html">Add new post</a>
 						</li>
 						<li>
 							<span><i class="fa-solid fa-circle-plus"></i></span>
@@ -103,7 +103,9 @@
 			<!-- lastest-post -->
 			<div class="lastest-post">
 				<div class="container">
-					<h3 class="lastest-post-title">lastest post</h3>
+					<div>
+						<h3 class="lastest-post-title">lastest post</h3>
+					</div>
 					<div id="lastest-post-list" class="row">
 						<!-- <div class="col-12 col-md-6 col-lg-4">
 							<div class="card">
