--- a/index.html
+++ b/index.html
@@ -55,6 +55,31 @@
 		</header>
 		<!-- Header -->
 		<main>
+			<!-- slider -->
+			<section class="carousel-section">
+				<div class="splide" aria-label="Splide Basic HTML Example">
+					<div class="splide__track">
+						<ul class="splide__list">
+							<li class="splide__slide">
+								<div class="img">
+									<img src="/images/banner-slider-1.jpg" alt="" />
+								</div>
+							</li>
+							<li class="splide__slide">
+								<div class="img">
+									<img src="/images/banner-slider-2.jpg" alt="" />
+								</div>
+							</li>
+							<li class="splide__slide">
+								<div class="img">
+									<img src="/images/lastest-post.jpg" alt="" />
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<!-- slider -->
 			<!-- template -->
 			<template id="postItemTemplate">
 				<div class="col-12 col-md-6 col-lg-4">
@@ -158,6 +183,25 @@
 					</a>
 				</li>
 			</ul>
+
+			<!-- Deleted Modal -->
+			<div class="delete-modal">
+				<div class="delete-modal__header">
+					<h4>Delete Post</h4>
+					<span data-id="closeModal"><i class="fa-solid fa-x"></i></span>
+				</div>
+				<div class="delete-modal__main">
+					<p>Are you sure you want to delete this Post ?</p>
+				</div>
+				<div class="delete-modal__footer">
+					<button type="button" data-id="closeModal">close</button>
+					<button class="delete-button" type="button" data-id="confirmDelete">
+						Delete
+					</button>
+				</div>
+			</div>
+			<!-- Deleted Modal -->
+			<div class="overlay" data-id="closModal"></div>
 		</main>
 		<footer></footer>
 		<script type="module" src="/js/home.js"></script>
