add-loading-page

--- a/detail-post.html
+++ b/detail-post.html
@@ -30,6 +30,15 @@
 		<!-- gooogle-font -->
 	</head>
 	<body>
+		<!-- loading -->
+		<section class="loading">
+			<ul class="list-dot">
+				<li class="dot"></li>
+				<li class="dot"></li>
+				<li class="dot"></li>
+				<li class="dot"></li>
+			</ul>
+		</section>
 		<!-- Header -->
 		<header>
 			<div class="container">
