--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
 			<!-- Deleted Modal -->
 			<div class="overlay" data-id="closModal"></div>
 		</main>
+		<!-- loading -->
+		<section class="loading">
+			<ul class="list-dot">
+				<li class="dot"></li>
+				<li class="dot"></li>
+				<li class="dot"></li>
+				<li class="dot"></li>
+			</ul>
+		</section>
 		<footer></footer>
 		<script type="module" src="/js/home.js"></script>
 	</body>
