--- a/add-edit-post.html
+++ b/add-edit-post.html
@@ -188,6 +188,15 @@
 			</div>
 		</section>
 		<!-- main -->
+		<!-- loading -->
+		<section class="loading">
+			<ul class="list-dot">
+				<li class="dot"></li>
+				<li class="dot"></li>
+				<li class="dot"></li>
+				<li class="dot"></li>
+			</ul>
+		</section>
 		<script type="module" src="/js/add-edit-post.js"></script>
 	</body>
 </html>
